--- a/src/main/g8/android/AndroidManifest.xml
+++ b/src/main/g8/android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="%PACKAGE%.android"
+    package="$organization$.$name$.android"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -12,8 +12,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="%PACKAGE%.android.AndroidLauncher"
-            android:label="@string/app_name" 
+            android:name="$organization$.$name$.android.AndroidLauncher"
+            android:label="@string/app_name"
             android:screenOrientation="landscape"
             android:configChanges="keyboard|keyboardHidden|orientation">
             <intent-filter>
