--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,6 +1,6 @@
 name=game
 organization=com.example
-api_level=19
+android_api_level=19
 scala_version=2.10.4
 libgdx_version=0.9.9
 verbatim=*.jpg *.png
